trunk/Archive2/b2/292b98143b76c0/output
main.cpp:16:5: error: use of undeclared identifier 'intx'
    intx{50}; // new 'x' initialization ok, we're inside main()'s inner scope
    ^
1 error generated.
